--- a/src/components/Heading.css
+++ b/src/components/Heading.css
@@ -26,3 +26,66 @@ h1 {
 hr {
     width: 60%;
 }
+
+@media (min-width: 320px) and (max-width: 768px) {
+  
+    h1 {
+        font-size: 2em;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .heading {
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 70vw;
+        text-align: center;
+        margin-top: 4px;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
+    
+}
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    
+    h1 {
+        font-size: 2em;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .heading {
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 60vw;
+        text-align: center;
+        margin-top: 4px;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
+  
+  
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+    h1 {
+        font-size: 2em;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .heading {
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 60vw;
+        margin-top: 20%;
+        text-align: center;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
+}
