--- a/src/components/Steps.css
+++ b/src/components/Steps.css
@@ -7,6 +7,9 @@
     color: white;
     border-radius: 12px;
     font-family: "Oswald", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .stepsList li {
     padding: 2px;
@@ -16,4 +19,67 @@
 
 span {
     padding-left: 10px;
+}
+
+/* phones */
+@media (min-width: 320px) and (max-width: 768px) {
+    
+    .steps{
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 70vw;
+        text-align: center;
+        margin-top: 10px;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
+    ul {
+        padding: 10px;
+    }
+    .stepsList li {
+        text-align: justify;
+        list-style-type: decimal;
+    }
+
+    .stepsList {
+       width: 80%;
+    }
+    
+    span {
+        padding-left: 5px;
+    }
+    
+}
+
+/* tablet */
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    .steps{
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 60vw;
+        text-align: center;
+        margin-top: 10px;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
+    
+}
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+    .steps{
+        background-color: rgba(0, 0, 0, 0.904);
+        width: 60vw;
+        text-align: center;
+        margin-top: 10px;
+        padding: 12px;
+        color: white;
+        border-radius: 12px;
+        font-family: "Oswald", sans-serif;
+    }
 }
